made some teeeiiinnny changes

--- a/src/apimod/templates/status.html
+++ b/src/apimod/templates/status.html
@@ -57,6 +57,7 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
             <li><a href="/api/">Docs</a></li>
+            <li><a href="/api/submit-video">Submit Video</a></li>
             <li><a href="https://github.com/devbrones/wol-api">Github</a></li>
           </ul>
         </div>
