--- a/src/apimod/templates/submit.html
+++ b/src/apimod/templates/submit.html
@@ -58,6 +58,7 @@
           <ul class="nav navbar-nav">
             <li><a href="/api/">Docs</a></li>
             <li><a href="/api/db-count">Stats</a></li>
+            <li><a href="/api/demo">Demo</a></li>
             <li><a href="https://github.com/devbrones/wol-api">Github</a></li>
           </ul>
         </div>
