--- a/src/apimod/templates/submit.html
+++ b/src/apimod/templates/submit.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <link href="https://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" media="screen">
     <link rel="stylesheet" href="https://fontlibrary.org//face/courier-prime" type="text/css" media="screen">
     <style type="text/css">
       .container {
